fixed shoping cart flex gap bug for safari

--- a/styles/main.css
+++ b/styles/main.css
@@ -227,9 +227,8 @@ body {
 }
 
 .cart-content {
-    display: flex;
-    flex-flow: nowrap column;
-    /* gap: 1rem; */
+    display: grid;
+    row-gap: 1rem;
 }
 
 /* a single cart item */
@@ -237,7 +236,6 @@ body {
     display: grid;
     grid-template-columns: auto 1fr auto;
     gap: 1rem;
-    margin: 0.5rem 0;
 }
 
 .cart-item img {
